# pre-commit-sops-secret

./: .envrc  .pre-commit-hooks.yaml  LICENSE  pyproject.toml
pre_commit_sops_secret/: main.py  sops.py  sops_rule.py
